# fractol

./: .gitignore  0000  CMakeLists.txt
includes/: fractol.h
libft/: CMakeLists.txt  Makefile
libft/includes/: libft.h
srcs/: auto_zooming.c  color1.c  color_fractol.c  error.c  extra_functions.c  fr_change_param.c  fr_color.c  fr_init.c  fr_keyboard.c  fr_menu.c  fr_mouse.c  fr_plot.c  fr_thread.c  ft_change_map.c  main.c
